test/fails/bad_tags/mult_fail.lgl
tag a is vec2;
tag b is vec3;

b x = [1., 2., 3.];
b->a b_a = [[1., 1.], [1., 1.], [1., 1.]];

vec2 fail = (b_a .* b_a) * z; // CMult is weird